kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-node
  template:
    metadata:
      labels:
        app: backend-node
    spec:
      containers:
      - name: backend-node
        image: ghcr.io/carlosmarind/backend-node-docker:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "500Mi"
      imagePullSecrets:
      - name: github-registry-secret
---
apiVersion: v1
kind: Service
metadata:
  name: backend-node-service
spec:
  selector:
    app: backend-node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-node-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backend.devops.cl
  rules:
  - host: backend.devops.cl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-node-service
            port:
              number: 80
